<resources>
    <string name="app_name">KMF Application</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">Home</string>
    <string name="my_transactions">My Details</string>
    <string name="my_payments">My Payments</string>
    <string name="settings">Settings</string>
    <string name="log_out">Logout</string>
    <string name="options">Options</string>

    <string name="user_create">Create User</string>
    <string name="transactions">Transactions</string>
    <string name="payments">Payments</string>
    <string name="personid">personId</string>
    <string name="person_id_title">Person Id:</string>
    <string name="first_name_title">First Name:</string>
    <string name="number_of_liters">Number of liters</string>
    <string name="person_name">Person Name</string>
    <string name="amount">Amount</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="person_id">Person Id</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel_action">Cancel</string>
    <string name="action_search">search...</string>
    <string name="generic_items">Generic Items</string>
    <string name="my_details">My Details</string>
    <string name="user_details">User Details</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="user_name">user name</string>
    <string name="dairy_id">dairy name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
</resources>
