<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.federation.milk.karantaka.kmfapp.MainActivity">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/my_transactions"
        android:orderInCategory="100"
        android:title="@string/my_transactions"
        app:showAsAction="never" />

    <item
        android:id="@+id/my_payments"
        android:orderInCategory="100"
        android:title="@string/my_payments"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item android:id="@+id/searchView"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
</menu>
