<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.federation.milk.karantaka.kmfapp.MainActivity">

    <item
        android:id="@+id/generics"
        android:title="@string/home">
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home_black_24dp"
                android:orderInCategory="100"
                android:title="@string/home"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/my_details"
        android:title="@string/my_transactions">
        <menu>
            <item
                android:id="@+id/my_transactions"
                android:icon="@drawable/ic_format_list_bulleted_black_24dp"
                android:orderInCategory="100"
                android:title="@string/my_transactions"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/logout_item"
        android:title="@string/options">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:orderInCategory="100"
                android:title="@string/settings"
                app:showAsAction="never" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:orderInCategory="100"
                android:title="@string/log_out"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>