<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/background_image"
    android:padding="50dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/person_details"
        android:layout_alignRight="@+id/person_details"
        android:layout_below="@+id/person_details"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/first_name"
            android:textColorHint="@android:color/holo_red_dark" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/last_name"
            android:textColorHint="@android:color/holo_red_dark"  />

        <EditText
            android:id="@+id/aadhar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/person_id"
            android:textColorHint="@android:color/holo_red_dark"  />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickStoreUser"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickCancelAction"
                android:text="@string/cancel_action" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>