<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="50dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/person_details"
        android:layout_alignRight="@+id/person_details"
        android:layout_below="@+id/person_details"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/payment_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/person_name"
            android:textColorHint="@android:color/holo_blue_light" />

        <EditText
            android:id="@+id/amount_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/amount"
            android:inputType="number"
            android:textColorHint="@android:color/holo_blue_bright" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickStorePayment"
                android:text="@string/add" />

            <Button
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickCancelAction"
                android:text="@string/cancel_action" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>